ListView insert Icon Image and config items' alignment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:textSize="@dimen/activity_title" />
 
         <ListView
-            android:id="@+id/locale_items"
+            android:id="@+id/main_items"
             style="@android:style/Widget.Material.ListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
