create floor activity

--- a/app/src/main/res/layout/activity_locale.xml
+++ b/app/src/main/res/layout/activity_locale.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_green_dark"
             android:hint="@string/app_name"
-            android:text="@string/locale_title"
+            android:text=""
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textColorHighlight="@android:color/holo_orange_dark"
