--- a/app/src/main/res/layout/activity_floor.xml
+++ b/app/src/main/res/layout/activity_floor.xml
@@ -8,7 +8,7 @@
 
 
     <LinearLayout
-        android:id="@+id/linear_main"
+        android:id="@+id/linear_floor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
